# crypto-analyzer

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
analytics-cli-client/: Cargo.toml
analytics-cli-client/src/: main.rs
analytics-client/: Cargo.toml  build.rs
analytics-client/src/: main.rs
analytics-frontend/: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  justfile
analytics-frontend/src/: lib.rs  services.rs  types.rs
analytics-frontend/src/components/: chart.rs  form.rs  layout.rs  mod.rs
analytics-frontend/src/pages/: analytics.rs  home.rs  mod.rs  trades.rs
analytics-server/: Cargo.toml  build.rs
analytics-server/proto/: analytics.proto
analytics-server/src/: main.rs
clickhouse_sink/: Cargo.toml  build.rs
clickhouse_sink/src/: main.rs
feed-handler/: Cargo.toml  build.rs
feed-handler/src/: main.rs
feed-handler/src/sources/: binance.rs  coinbase.rs  mod.rs
nats-checker/: Cargo.toml
nats-checker/src/: main.rs
nats_to_kafka_bridge/: Cargo.toml
nats_to_kafka_bridge/src/: main.rs
proto/: analytics.proto  trade.proto
