[workspace]
members = [ "analytics-client", "analytics-server", "clickhouse_sink","feed-handler", "nats-checker", "nats_to_kafka_bridge"]
resolver = "2"
version = "0.1.0"

[workspace.dependencies]
tokio = {version = "1.47.1", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}

futures-util = "0.3.31"
serde_json = "1.0.143"
async-nats = "0.42.0"
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build"] }
clickhouse = "0.13.3"
prost = "0.14.1"
tonic = "0.14.1"
