[package]
name = "analytics-client"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
tonic = {workspace = true}
tokio = {workspace = true}
tonic-prost = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}

[build-dependencies]
tonic-prost-build = "0.14.1"