[package]
name = "analytics-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
tonic = {workspace = true}
tonic-prost = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"
datafusion = "49.0.2"
serde = {workspace = true}
clickhouse = {workspace = true}
[build-dependencies]
tonic-prost-build = "0.14.1"