[package]
name = "analytics-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
tonic = {workspace = true}
tonic-prost = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
datafusion = "49.0.2"
serde = {workspace = true}
clickhouse = {workspace = true}
async-stream = {workspace = true}
async-nats = {workspace = true}
futures = {workspace = true}
tonic-web = "0.14.1"
tower-http = { version = "0.5", features = ["cors"] }
[build-dependencies]
tonic-prost-build = "0.14.1"