[package]
name = "clickhouse_sink"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
clickhouse = {workspace = true, features = ["chrono"]}
rdkafka = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
chrono = {workspace = true}
tokio = {workspace = true}

[build-dependencies]
tonic-prost-build = "0.14.1"
