[package]
name = "nats-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = {workspace = true}
prost-types = {workspace = true}
async-nats = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
futures-util = {workspace = true}

[build-dependencies]
tonic-prost-build = "0.14.1"